--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="en-US">
-  <head>
-    <title>BEYU - HÃY LÀ CHÍNH MÌNH</title><!-- inject:css -->
-<link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.css">
-<link rel="stylesheet" href="/bower_components/font-awesome/css/font-awesome.css">
-<!-- endinject -->
-  </head>
-  <body>
-    <h1>Hello</h1><!-- inject: -->
-<!-- endinject -->
-  </body>
+
+<head>
+    <title>BEYU - HÃY LÀ CHÍNH MÌNH</title>
+    <!-- inject:css -->
+    <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="/bower_components/font-awesome/css/font-awesome.css">
+    <!-- endinject -->
+</head>
+
+<body>
+    <h1>Hello</h1>
+    <!-- inject: -->
+    <!-- endinject -->
+</body>
+
 </html>
